--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                     <h1 class="navbar-brand" href="#"><div class="bs-light fs-3">Xavier Dollente</div><span class="bs-light fs-6">Class Of 2025</span></h1>
                     <ul class="navbar-nav menu menu1">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="academic.html">Academic and Community Service</a>
