content to meta and content added

--- a/academic.html
+++ b/academic.html
@@ -66,9 +66,9 @@
             <img class="col-sm-4 img-thumbnail rounded-circle" src="img/chess.PNG" alt="chess">
             <h3>Chess club - Treasurer</h3>
             <img class="col-sm-4 img-thumbnail rounded-circle" src="img/scijpg.jpg" alt="Sci opm">
-            <h3>Science Olympiad - Member</h3>
+            <h3>Science Olympiad - Member (2023-4)</h3>
             <img class="col-sm-4 img-thumbnail rounded-circle" src="img/Keyclub.png" alt="key club">
-            <h3>Key Club - Proud Member</h3>
+            <h3>Key Club - Proud Member (2023-4) - Club Representative</h3>
             <img class="col-sm-4 img-thumbnail rounded-circle" src="img/nths.PNG" alt="Sci opm">
             <h3>National Technical Honor Society - Member</h3>
             <img class="col-sm-4 img-thumbnail rounded-circle" src="img/aoit.PNG" alt="key club">
