--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -59,7 +59,7 @@
             <div class="col-sm-6">
               <h2>Get to know me!</h2>
               <br>
-              <p>My name is Xavier Orion Dollente. A fun little fact is my initials make up a face: XOD. I'm a Junior at Waipahu High School. I'm taking a course called Cyber Security. Cyber Security has a lot to do with my dream job, as it stands cyber touch base with many aspects involving coding. Two of my goals in life are to become a Game Developer and at the same time to bring joy to people through the games that I solely make. Each step is ever closer and this site is one of those steps.</p>
+              <p>My name is Xavier Orion Dollente. A fun little fact is my initials make up a face: XOD. I'm a Senior at Waipahu High School. I'm taking a course called Cyber Security. Cyber Security has a lot to do with my dream job, as it stands cyber touch base with many aspects involving coding. Two of my goals in life are to become a Game Developer and at the same time to bring joy to people through the games that I solely make. Each step is ever closer and this site is one of those steps.</p>
               <!--May have to change it up to express my pros and cons but that can be done on a later date-->
               
             </div>
