--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="container py-5" id="AboutMeh">
                     <div class="row align-items-center mb-5">
                         <div class="col-12 col-md-4 mb-4 mb-md-0 text-center">
-                            <img class="img-thumbnail rounded-circle" src="img/glasses.png" alt="Me" style="max-width: 200px;">
+                            <img class="img-thumbnail rounded-circle" src="img/glasses.JPG" alt="Me" style="max-width: 200px;">
                         </div>
                         <div class="col-12 col-md-8">
                             <h2 class="text-center text-md-start">Get to know me!</h2>
