added nav link to club link and fix text

--- a/club.html
+++ b/club.html
@@ -87,7 +87,7 @@
                         <div class="col-12 col-md-8">
                             <div class="card shadow-sm">
                                 <div class="card-body">
-                                    <p class="card-text">As a member of the Science Olympiad team, I participate in various STEM-based competitions that test knowledge, problem-solving skills, and creativity. I specialize in physics and engineering events, collaborating with teammates to design and build devices for competition.</p>
+                                    <p class="card-text">As a member of the Science Olympiad team, I participate in various STEM-based competitions that test knowledge, problem-solving skills, and creativity. I specialize in physics events, collaborating with teammates to design and build devices for competition.</p>
                                     <p class="card-text">Science Olympiad has significantly enhanced my technical skills and scientific knowledge while allowing me to work alongside peers who share my passion for science and innovation. Our team regularly practices and prepares for regional and state competitions.</p>
                                 </div>
                             </div>
@@ -173,7 +173,7 @@
                             <div class="card shadow-sm">
                                 <div class="card-body">
                                     <p class="card-text">As a SkillsUSA member, I participate in career and technical education activities that promote personal, workplace, and technical skills grounded in academics. SkillsUSA has given me opportunities to compete in my field of interest, demonstrating the skills I've developed through my technical education.</p>
-                                    <p class="card-text">Through SkillsUSA, I've developed valuable career readiness skills including teamwork, communication, and problem-solving. The organization connects me with industry professionals and provides networking opportunities that will benefit my future career path. I've participated in chapter meetings and preparation sessions for regional and state competitions.</p>
+                                    <p class="card-text">Through SkillsUSA, I've developed valuable career readiness skills including teamwork, communication, and problem-solving. The organization connects me with industry professionals and provides networking opportunities that will benefit my future career path. I've participated in preparation sessions for regional and state competitions.</p>
                                 </div>
                             </div>
                         </div>
