--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                                     <a class="nav-link" href="academic.html">Academic and Community Service</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="club.html">Clubs</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
                             </ul>
@@ -51,11 +54,11 @@
             </header>
         
             <main>
-                <!--  Hero section -->
+                <!--  top section -->
                 <div class="container-fluid text-center py-4" style="background-color: #e3f2fd;">
                     <div class="row align-items-center">
                         <div class="col-12 col-md-4 mb-4 mb-md-0">
-                            <img src="img/Xavier_Dollente_Headshot.png" class="img-thumbnail rounded-circle img-fluid" alt="Xavier Dollente" style="max-width: 500px;">
+                            <img src="img/Xavier_Dollente_Headshot (2).png" class="img-thumbnail rounded-circle img-fluid" alt="Xavier Dollente" style="max-width: 500px;">
                         </div>
                         <div class="col-12 col-md-8">
                             <h1 class="display-2 display-md-1">Xavier <br class="d-md-none">Orion <br class="d-md-none">Dollente</h1>
@@ -66,7 +69,7 @@
                 <div class="container py-5" id="AboutMeh">
                     <div class="row align-items-center mb-5">
                         <div class="col-12 col-md-4 mb-4 mb-md-0 text-center">
-                            <img class="img-thumbnail rounded-circle" src="img/glasses.JPG" alt="Me" style="max-width: 200px;">
+                            <img class="img-thumbnail rounded-circle" src="img/glasses.JPG" alt="Me" style="max-width: 300px;">
                         </div>
                         <div class="col-12 col-md-8">
                             <h2 class="text-center text-md-start">Get to know me!</h2>
