--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,9 @@
                                     <a class="nav-link" href="academic.html">Academic and Community Service</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="club.html">Clubs</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link active" href="contact.html">Contact</a>
                                 </li>
                             </ul>
